// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Product OpenShift Metrics config should apply graph configuration: filters 1`] = `
{
  "groupedFiltersSettings": {
    "settings": {
      "isStandalone": false,
      "metric": undefined,
      "metrics": [
        {
          "chartType": "area",
          "color": "#06c",
          "fill": "#8bc1f7",
          "id": "Cores",
          "isCapacity": false,
          "isStacked": true,
          "isStandalone": false,
          "isThreshold": false,
          "metric": "Cores",
          "stroke": "#06c",
          "strokeWidth": 2,
        },
      ],
    },
  },
  "standaloneFiltersSettings": [],
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should NOT display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  />,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"1.1K"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value below 1000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"500"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: product action display should display a total value below 1000000 1`] = `
{
  "productActionDisplay": <div
    className="curiosity-usage-graph__total"
  >
    t(curiosity-graph.cardActionTotal_Cores, {"context":"Ipsum","total":"900K"})
  </div>,
}
`;

exports[`Product OpenShift Metrics config should apply graph configuration: settings 1`] = `
{
  "actionDisplay": [Function],
  "isCardTitleDescription": true,
}
`;

exports[`Product OpenShift Metrics config should apply hosts inventory configuration: filtered 1`] = `
{
  "cells": [
    {
      "title": <React.Fragment>
        lorem
         
        
      </React.Fragment>,
    },
    {
      "title": "12.53",
    },
    {
      "title": <DateFormat
        date="2022-01-01T00:00:00.000Z"
      />,
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_core_hours, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "core_hours": {
      "title": "t(curiosity-inventory.header_core_hours, {"context":"OpenShift-metrics"})",
      "value": 12.53,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "value": "lorem",
    },
    "inventory_id": {
      "title": "t(curiosity-inventory.header_inventory_id, {"context":"OpenShift-metrics"})",
      "value": "lorem inventory id",
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "value": "2022-01-01T00:00:00.000Z",
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header_loremIpsum, {"context":"OpenShift-metrics"})",
      "value": "hello world",
    },
  },
}
`;

exports[`Product OpenShift Metrics config should apply hosts inventory configuration: filtered, fallback display 1`] = `
{
  "cells": [
    {
      "title": "lorem",
    },
    {
      "title": "0.00",
    },
    {
      "title": "",
    },
  ],
  "columnHeaders": [
    {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "transforms": [],
    },
    {
      "title": "t(curiosity-inventory.header_core_hours, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
    {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "transforms": [
        [Function],
      ],
    },
  ],
  "data": {
    "core_hours": {
      "title": "t(curiosity-inventory.header_core_hours, {"context":"OpenShift-metrics"})",
      "value": null,
    },
    "display_name": {
      "title": "t(curiosity-inventory.header_display_name, {"context":"OpenShift-metrics"})",
      "value": "lorem",
    },
    "inventory_id": {
      "title": "t(curiosity-inventory.header_inventory_id, {"context":"OpenShift-metrics"})",
      "value": null,
    },
    "last_seen": {
      "title": "t(curiosity-inventory.header_last_seen, {"context":"OpenShift-metrics"})",
      "value": null,
    },
    "loremIpsum": {
      "title": "t(curiosity-inventory.header_loremIpsum, {"context":"OpenShift-metrics"})",
      "value": "hello world",
    },
  },
}
`;
